@@ -8,6 +8,7 @@ import com.google.api.client.googleapis.javanet.GoogleNetHttpTransport;
 import com.google.api.client.http.HttpTransport;
 import com.google.api.client.json.JsonFactory;
 import com.google.api.client.json.jackson2.JacksonFactory;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -62,10 +63,9 @@ public class GoogleAuthValidator {
       if (publicKeyCheck != null) return publicKeyCheck;
 
       FieldError clientIdCheck = validateClientId(authConfig.getClientId());
-      if (clientIdCheck != null) return clientIdCheck;
+      return clientIdCheck;
 
       // Return null for success (no error)
-      return null;
     } catch (Exception e) {
       LOG.error("Google public client validation failed", e);
       return ValidationErrorBuilder.createFieldError(
@@ -134,8 +134,7 @@ public class GoogleAuthValidator {
               accessType,
               prompt,
               scope);
-      if (credentialsCheck != null) return credentialsCheck;
-      return null;
+      return credentialsCheck;
     } catch (Exception e) {
       LOG.error("Google confidential client validation failed", e);
       return ValidationErrorBuilder.createFieldError(
@@ -452,11 +451,11 @@ public class GoogleAuthValidator {
           "grant_type=authorization_code"
               + "&code=invalid_authorization_code_for_validation"
               + "&client_id="
-              + java.net.URLEncoder.encode(clientId, "UTF-8")
+              + java.net.URLEncoder.encode(clientId, StandardCharsets.UTF_8)
               + "&client_secret="
-              + java.net.URLEncoder.encode(clientSecret, "UTF-8")
+              + java.net.URLEncoder.encode(clientSecret, StandardCharsets.UTF_8)
               + "&redirect_uri="
-              + java.net.URLEncoder.encode(DEFAULT_REDIRECT_URI, "UTF-8");
+              + java.net.URLEncoder.encode(DEFAULT_REDIRECT_URI, StandardCharsets.UTF_8);
 
       ValidationHttpUtil.HttpResponseData response =
           ValidationHttpUtil.postForm(GOOGLE_TOKEN_URL, formData);
